<resources>
    <string name="app_name">Your Spendings</string>
    <string name="select_place">Select place</string>
    <string name="place_name">Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="places_list">Places list</string>
    <string name="back">back</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="register_success">Your account registered successfully. Now you can use application</string>
    <string name="main_menu">Main menu</string>
    <string name="sign_out">Sign Out</string>
    <string name="places">Places</string>
    <string name="dashboard">Dashboard</string>
    <string name="date">Date</string>
    <string name="shop">Shop</string>
    <string name="select_item">Select item</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="images">Images</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="exit">Exit</string>
    <array name="imageSources">
        <item>Camera</item>
        <item>Picture Library</item>
    </array>
    <string name="imageSource">Image Source</string>
    <string name="new_purchase">New purchase</string>
    <string name="purchases">Purchases</string>
    <string name="error_empty_login">Login should not be empty</string>
    <string name="error_empty_password">Password should not be empty</string>
    <string name="error_passwords_should_match">Passwords should match</string>
    <string name="purchases_list">Purchases list</string>
    <string name="save_success">Item saved successfully</string>
    <string name="new_place">New place</string>
    <string name="select_date">Select date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="preview">Preview</string>
    <string name="MAPS_API_KEY">AIzaSyDoISFvPzwk0zeSggqrmd2ItbeJBsmXotU</string>
</resources>
