<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/header_fragment"/>
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_margin="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <Button android:id="@+id/new_purchase_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_purchase"/>
        <Button android:id="@+id/purchases_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchases"/>
        <Button android:id="@+id/places_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/places"/>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="0dp"
                      android:layout_weight="10"/>
        <Button android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"/>
    </LinearLayout>
</LinearLayout>