<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_item"
    />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/list_container"
    />
    <Button android:id="@+id/select_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
    />
    <Button android:id="@+id/edit_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
    />
</LinearLayout>