<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/header"
>
    <ImageButton
            android:visibility="visible"
            android:id="@+id/drawer_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_black_24dp"
            android:contentDescription="@string/main_menu"/>
    <ImageButton
            android:visibility="gone"
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back"/>
    <ImageButton
            android:visibility="gone"
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            android:contentDescription="@string/add"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/header_title"
              android:textAlignment="center"
              style="@style/headerText"
              android:padding="10dp"
    />
</LinearLayout>
